--- a/1-introducao/capitulo_intro.tex
+++ b/1-introducao/capitulo_intro.tex
@@ -18,13 +18,14 @@ Segundo Chaudhuri e Dayal \cite{chaudhuri1997overview} dois elementos são essen
 \textit{Data Warehouses} (DWs), responsáveis pelo armazenamento homogêneo de dados oriundos de sistemas heterogêneos, e recuperação destes dados; 
 e aplicações OLAP (\textit{On-Line Analytical Processing}).
 
-De acordo com a literatura, existe uma série de princípios que devem ser seguidos ao projetar e implementar um ambiente OLAP dentro de um DW. 
-Dentre estes princípios, destaca-se a rapidez com que os dados devem ser recuperados e processados no DW. Este princípio é considerado fundamental 
+De acordo com a literatura, existe uma série de princípios que devem ser seguidos ao projetar e implementar um ambiente OLAP dentro de um DW, destacando-se a rapidez com que os dados devem ser recuperados e processados no DW. Este princípio é considerado fundamental 
 na maior parte da literatura referente à construção de ambientes OLAP, a exemplo de Codd; Codd e Salley \cite{codd1998providing}, Kimball e Ross \cite{kimball2002dw} 
 e Wremble e Koncilia \cite{wrembel2007data}. Sendo assim, vários aspectos técnicos devem ser considerados sob diferentes pontos de vista. 
 Políticas de \textit{cache} específicas para um servidor de estruturas utilizadas pela aplicação OLAP para armazenar e recuperar dados em memória 
 e o SGBD (Sistema Gerenciador de Banco de Dados) utilizado para o gerenciamento do DW são exemplos de aspectos técnicos que também fazem parte de um ambiente OLAP, 
-e que devem ser considerados. De acordo com Elmasri e Navathe \cite{navathe2011banco} SGBD são importantes para a manutenção 
+e que devem ser considerados. 
+
+De acordo com Elmasri e Navathe \cite{navathe2011banco} SGBD são importantes para a manutenção 
 e proteção de um banco de dados por um longo período; e também atuam no processo de recuperação de dados de um DW. Neste contexto, 
 a escolha do SGBD no processo de desenvolvimento de um ambiente de análise para organizações com grande quantidade de dados e que utilizam ferramentas OLAP 
 como auxílio na tomada de decisões é importante. 
@@ -32,7 +33,7 @@ como auxílio na tomada de decisões é importante.
 Duas classes de SGBD podem ser utilizadas para realizar o gerenciamento de um DW: SGBD relacionais tradicionais orientados à linha e uma nova abordagem de SGBD 
 NoSQL que são orientados à coluna (SGBD colunares), que fornecem um melhor desempenho à recuperação de dados \cite{good2017column}. 
 Dada a importância na escolha do SGBD e as diferentes soluções apresentadas por cada um, torna-se útil o uso de um 
-benchmark\footnote{ferramentas utilizadas para medir e validar o desempenho de alguma tecnologia sob condições de avaliação \cite{bouckaert2010benchmarking}} 
+benchmark\footnote{Ferramentas utilizadas para medir e validar o desempenho de alguma tecnologia sob condições de avaliação \cite{bouckaert2010benchmarking}} 
 para a realização de uma análise entre SGBD. Existe uma organização sem fins lucrativos fundada com o objetivo de definir padrões para avaliar o 
 desempenho de transações e de bancos de dados com o uso de benchmarks, o TPC (\textit{Transactional Processing Performance Council}) \cite{tpc2017page}. 
 Esta organização é responsável pela criação de um benchmark voltado para decisões de negócio, o TPC-H \cite{tpch2017page}.
@@ -41,27 +42,30 @@ Para refletir a realidade de uma empresa, o TPC-H propõe um ambiente de anális
 existe uma discussão sobre a normalização e a denormalização dos dados de um DW. Algumas empresas utilizam um modelo normalizado e têm como 
 justificativa a flexibilidade e a facilidade em situações de manutenção do DW. Por outro lado, existem empresas que utilizam modelos denormalizados 
 e têm como justificativa o ganho de desempenho nas consultas, visto que um modelo denormalizado tende a diminuir o número de tabelas e, por consequência, 
-os \textit{joins} entre tabelas. 
+as operações de junção entre tabelas. 
 
 O objetivo deste trabalho é a realização de um estudo comparativo entre SGBD, relacionais orientados à linha e orientados à coluna, 
 como gerenciadores de DWs em ambientes OLAP. A comparação será realizada utilizando-se o benchmark TPC-H em sua proposta original, um modelo de banco normalizado; 
 além de uma adaptação para um modelo DW denormalizado. Desta maneira, será possível avaliar os SGBD selecionados de acordo com o modelo do DW, não apenas no 
-contexto original proposto pelo benchmark. Para alcançar tal objetivo, é necessário a execução de uma série de tarefas. A primeira parte engloba o 
+contexto original proposto pelo benchmark. Para alcançar tal objetivo, é necessária a execução de uma série de tarefas. A primeira parte engloba o 
 desenvolvimento dos dois ambientes de análise, o modelo padrão proposto pelo TPC-H e o modelo denormalizado, adaptado do TPC-H. Após, são gerados os 
 dados para popular os SGBD e as consultas para as questões de negócio propostas pelo TPC-H; então é feita a população dos dados gerados nos SGBD. 
 A segunda parte consiste na execução das consultas para cada um dos ambientes de análise, sendo que para o ambiente adaptado as consultas devem 
 ser escritas de acordo com as alterações efetuadas. E por fim a aplicação do cálculo de desempenho proposto pelo TPC-H para os dois ambientes. 
 
-A organização do documento é da seguinte forma:
+A organização do documento segue da seguinte forma:
 
 \begin{itemize}
 	\item \textbf{Capítulo 2}: apresenta detalhes sobre recuperação de informações, explicando os conceitos de \textit{Data Warehouses}, 
-	ambientes OLAP e a conexão entre ambos; e SGBD relacionais orientados à linha e à coluna.
-	\item \textbf{Capítulo 3}: SGBD
-	\item \textbf{Capítulo 4}: NoSQL
-	\item \textbf{Capítulo 5}: apresenta detalhes sobre o benchmark TPC-H, abrangendo informações sobre o ambiente normalizado proposto pelo próprio benchmark; 
-	bem como sobre o ambiente denormalizado proposto neste trabalho. É também apresentada a metodologia utilizada para medição e análise do desempenho dos SGBD.
-	\item \textbf{Capítulo 4}: apresenta o cronograma de desenvolvimento desde trabalho e uma discussão sobre os próximos passos deste desenvolvimento.
+	ambientes OLAP e a conexão entre ambos.
+	\item \textbf{Capítulo 3}: apresenta uma breve descrição da motivação no uso de SGBD como gerenciadores de DW, bem como a descrição 
+	do modelo relacional, suas limitações e uma introdução a NoSQL.
+	\item \textbf{Capítulo 4}: apresenta detalhes de como e porquê surgiram os SGBD NoSQL, assim como a descrição do modelo colunar.
+	\item \textbf{Capítulo 5}: apresenta detalhes sobre o benchmark TPC-H, abrangendo informações sobre o ambiente normalizado proposto pelo próprio benchmark; bem como sobre o ambiente denormalizado proposto neste trabalho. É também apresentada a metodologia utilizada para medição e análise do desempenho dos SGBD.
+	\item \textbf{Capítulo 6}: é apresentado o estudo comparativo entre os SGBD PostgreSQL e MonetDB, dividido em cenários conforme o fator 
+	de escala, bem como a discussão dos resultados obtidos.
+	\item \textbf{Capítulo 7}: são discorridas as conclusões obtidas a partir dos resultados obtidos no experimento, assim como 
+	trabalhos futuros.
 \end{itemize}
 
 
