--- a/Referencias.bib
+++ b/Referencias.bib
@@ -306,34 +306,6 @@ month={Oct},}
   publisher={Academy of Economic Studies-Bucharest, Romania}
 }
 
-% Column DB
-
-@inproceedings{macnicol2004sybase,
-  title={Sybase IQ multiplex-designed for analytics},
-  author={MacNicol, Roger and French, Blaine},
-  booktitle={Proceedings of the Thirtieth international conference on Very large data bases-Volume 30},
-  pages={1227--1230},
-  year={2004},
-  organization={VLDB Endowment}
-}
-
-@MISC{vertica2017c,
-	title = {Vertica},
-	year = 2017,
-	url = {https://www.vertica.com/},
-	note = {Acessado em: 20 de agosto de 2017}
-}
-
-@MISC{monetdb2017c,
-	title = {MonetDB -- The column-store pioneer},
-	year = 2017,
-	url = {https://www.monetdb.org/Home},
-	note = {Acessado em: 20 de agosto de 2017}
-}
-
-%%%
-
-
 % Benchmarking
 
 @article{bhutta1999benchmarking,
@@ -494,4 +466,140 @@ month={Oct},}
   pages={31--39},
   year={1993},
   publisher={ACM}
+}
+
+@article{soares2012avaliaccao,
+  title={Uma Avaliação Experimental de Desempenho entre Sistemas Gerenciadores de Bancos de Dados Colunares e Relacionais},
+  author={Soares, Bruno Eduardo},
+  year={2012}
+}
+
+% ---------------------- SGBDS NOSQL
+
+@misc{neo2018nosql,
+  title = {The Neo4j Graph Plataform - The \#1 Platform for Connected Data},
+	year = 2018,
+	url = {https://neo4j.com/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{voldemort2018nosql,
+  title = {Project Voldemort: A distributed database},
+	year = 2018,
+	url = {https://www.project-voldemort.com/voldemort/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{riak2018nosql,
+  title = {Riak},
+	year = 2018,
+	url = {http://basho.com/products/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{redis2018nosql,
+  title = {Redis},
+	year = 2018,
+	url = {https://redis.io/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{mongo2018nosql,
+  title = {MongoDB for Giant Ideas},
+	year = 2018,
+	url = {https://www.mongodb.com/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{couch2018nosql,
+  title = {Apache CouchDB},
+	year = 2018,
+	url = {http://couchdb.apache.org/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@misc{cstore2018nosql,
+  title = {C-Store: A Column-Oriented DBMS},
+	year = 2018,
+	url = {http://db.lcs.mit.edu/projects/cstore/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{vertica2017c,
+	title = {Vertica},
+	year = 2017,
+	url = {https://www.vertica.com/},
+	note = {Acessado em: 20 de agosto de 2017}
+}
+
+@MISC{monetdb2017c,
+	title = {MonetDB -- The column-store pioneer},
+	year = 2017,
+	url = {https://www.monetdb.org/Home},
+	note = {Acessado em: 20 de agosto de 2017}
+}
+
+@MISC{google2018nosql,
+	title = {BigTable - Scalable NoSQL Database Service},
+	year = 2018,
+	url = {https://cloud.google.com/bigtable/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{amazon2018nosql,
+	title = {Amazon DynamoDB - NoSQL Database Service},
+	year = 2018,
+	url = {https://aws.amazon.com/dynamodb/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{cassandra2018nosql,
+	title = {Apache Cassandra},
+	year = 2018,
+	url = {http://cassandra.apache.org/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+% ------------------------ SGBD RELACIONAIS
+
+@MISC{postgres2018r,
+	title = {PostgreSQL: The World's Most Advanced Open Source Relational Database},
+	year = 2018,
+	url = {https://www.postgresql.org/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{mysql2018r,
+	title = {MySQL: The world's most popular open source database},
+	year = 2018,
+	url = {https://www.mysql.com/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{microsoft2018r,
+	title = {Microsoft SQL Server},
+	year = 2018,
+	url = {https://www.microsoft.com/en-us/sql-server/sql-server-2017},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{lite2018r,
+	title = {Microsoft SQL Server},
+	year = 2018,
+	url = {https://www.sqlite.org/index.html},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{maria2018r,
+	title = {MariaDB - Supporting continuity and open collaboration},
+	year = 2018,
+	url = {https://mariadb.org/},
+	note = {Acessado em: 20 de maio de 2018}
+}
+
+@MISC{oracle2018r,
+	title = {Database and Cloud Database - Oracle},
+	year = 2018,
+	url = {https://www.oracle.com/database/index.html},
+	note = {Acessado em: 20 de maio de 2018}
 }
