--- a/iniciais/capa.tex
+++ b/iniciais/capa.tex
@@ -25,7 +25,7 @@ Colegiado de Ciência da Computação\\
 \vspace{9cm}
 \begin{center}
 \fontsize{13}{13}
-\textbf{Análise de Performance entre SGBDs para Ambientes OLAP Utilizando TPC-H}\\
+\textbf{Análise de Desempenho entre PostgreSQL e MonetDB para Ambientes OLAP Utilizando TPC-H}\\
 \vspace{0.3cm}
 \textit{Letícia Torres}\\
 \vspace{9cm}
