--- a/iniciais/rosto.tex
+++ b/iniciais/rosto.tex
@@ -15,7 +15,7 @@
 \textbf{LETÍCIA TORRES}\\
 \vspace{8cm}
 \fontsize{14}{14}
-\textbf{\MakeUppercase{Análise de Performance entre SGBDs para Ambientes OLAP Utilizando TPC-H}}\\
+\textbf{\MakeUppercase{Análise de Desempenho entre PostgreSQL e MonetDB para Ambientes OLAP Utilizando TPC-H}}\\
 \vspace{2cm}
 \end{center}
 \fontsize{12}{12}
@@ -26,7 +26,7 @@ Monografia apresentada como requisito parcial para obtenção do grau de Bachare
 
 \vspace{1.5cm}
 \noindent
-Orientador: Prof. Dr. Marcio Seiji Oyamada
+Orientador: Prof. Dr. Clodis Boscarioli
 \end{minipage}
 \end{flushright}
 \vspace{5cm}
