--- a/iniciais/aprova.tex
+++ b/iniciais/aprova.tex
@@ -15,7 +15,7 @@
 \textbf{LETÍCIA TORRES}\\
 \vspace{3cm}
 \fontsize{14}{14}
-\textbf{\MakeUppercase{Análise de Performance entre SGBDs para Ambientes OLAP Utilizando TPC-H}}\\
+\textbf{\MakeUppercase{Análise de Desempenho entre PostgreSQL e MonetDB para Ambientes OLAP Utilizando TPC-H}}\\
 \vspace{3cm}
 \fontsize{10}{10}
 Monografia apresentada como requisito parcial para obtenção do Título de Bacharel em Ciência da Computação, pela Universidade Estadual do Oeste do Paraná, Campus de Cascavel, aprovada pela Comissão formada pelos professores:\\
